# Tokyo-2020

./: Atleta.cpp  Atleta.h  CMakeLists.txt  Comitiva.cpp  Comitiva.h  Data.cpp  Data.h  Exception.cpp  Exception.h  Medalhas.cpp  Medalhas.h  Pessoa.cpp  Pessoa.h  README.md  Records.cpp  Records.h  Staff.cpp  Staff.h  main.cpp  menu.cpp  menu.h  utils.cpp  utils.h
build-dir/: CMakeCache.txt  Makefile  Tokyo2020  cmake_install.cmake  medalhas.txt  portugal.txt  records.txt  staffantigos.txt
